kubernetes/apps/media/notifiarr/app/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: notifiarr
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: notifiarr
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: traefik-internal-network
            io.kubernetes.pod.namespace: network
        - matchLabels:
            app.kubernetes.io/name: prowlarr
            io.kubernetes.pod.namespace: media
        - matchLabels:
            app.kubernetes.io/name: sonarr
            io.kubernetes.pod.namespace: media
        - matchLabels:
            app.kubernetes.io/name: radarr
            io.kubernetes.pod.namespace: media
      toPorts:
        - ports:
            - port: "5454"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prowlarr
            io.kubernetes.pod.namespace: media
      toPorts:
        - ports:
            - port: "9696"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: sonarr
            io.kubernetes.pod.namespace: media
      toPorts:
        - ports:
            - port: "8989"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: radarr
            io.kubernetes.pod.namespace: media
      toPorts:
        - ports:
            - port: "7878"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: plex
            io.kubernetes.pod.namespace: media
      toPorts:
        - ports:
            - port: "32400"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: qbittorrent
            io.kubernetes.pod.namespace: media
        - matchLabels:
            app.kubernetes.io/name: sabnzbd
            io.kubernetes.pod.namespace: media
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - toFQDNs:
        - matchName: carolina.notifiarr.com
        - matchName: california.notifiarr.com
        - matchName: notifiarr.com
        - matchName: discord.com
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
